[package]
name = "byte_rb"
version = "1.0.0"
description ="byte ring buffer"
keywords = ["byte buffer","ring buffer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeremyko/byte_rb"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]