[package]
name = "byte_rb"
authors = ["JungHyun Ko <jeremyko69@gmail.mail>"]
version = "1.0.1"
description ="byte ring buffer"
keywords = ["byte_buffer","ring_buffer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeremyko/byte_rb"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]